[package]
name = "wpblsync"
version = "0.1.0"
edition = "2018"
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]
license = "MIT"
repository = "https://github.com/losfair/wpblsync"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.25.3"
reqwest = "0.11.4"
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3"
structopt = "0.3.23"
hex = "0.4.3"
